# DevOps-2

./: .Makefile.am.swo  .Makefile.swp  .configure.ac.swp  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  devops2  devops2.1  main.cpp  scriptA.sh  scriptB.sh
.deps/: FuncA.Po  HTTP_Server.Po  main.Po
.github/workflows/: Test.yml  branchHTTPserverTest.yml  build.yml  c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.4
deb/DEBIAN/: control
tests/: .main.cpp.swp  Makefile  Makefile.am  Makefile.in  devops2test1  main.cpp
tests/.deps/: main.Po
